bug fix on collapse info window

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -149,7 +149,7 @@
 }
 
 .gm-style-iw-d {
-  padding-top: 4px;
+  padding-top: 20px;
 }
 
 
